# cmake_template

./: CMakeLists.txt  build-aarch64.sh  build-loongarch64.sh  build-mips.sh  build-mips64.sh  build-windows.bat
cmake/: utils.cmake
src/exe/: CMakeLists.txt  main.cpp
src/shared_lib/: CMakeLists.txt  VersionInfo.rc.in  exports.def  exports.map  exports.txt  pch.h  shared_lib_api.cpp  shared_lib_api.h
src/static_lib/: CMakeLists.txt  static_lib_api.cpp  static_lib_api.h
toolchains/: aarch64.toolchain.cmake  loongarch64.toolchain.cmake  mips.toolchain.cmake  mips64.toolchain.cmake
